# dagster-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  dagster.yaml  dagster.yaml.sh  docker-compose-dagster.yml  entrypoint.sh  pyproject.toml  repos.py  workspace.yaml
dags/: __init__.py
dags/assets/bronze/bar/: __init__.py  assets.py
dags/assets/bronze/baz/: assets.py
dags/assets/bronze/foo/: __init__.py  assets.py
dags/assets/silver/bar/: __init__.py  assets.py
dags/assets/silver/foo/: __init__.py  assets.py
dags/sensors/: alerts.py
dags/utils/: db.py
pipelines_cookbook/cookbook/: pipelines.py  solids.py
pipelines_cookbook/cookbook/environments/: cookbook_dev.yaml  cookbook_prod.yaml
pipelines_cookbook/dynamic_solid/: pipelines.py  solids.py
pipelines_cookbook/dynamic_solid/environments/: dev.yaml  prod.yaml
pipelines_cookbook/partition_set/: pipelines.py  solids.py
pipelines_cookbook/partition_set/environments/: dev.yaml
pipelines_cookbook/sensor/: pipelines.py  solids.py
pipelines_cookbook/sensor/environments/: dev.yaml
utils/: day_utils.py  log.py  sleep_utils.py  yaml_utils.py
