[tool.dagster]
module_name = "dags"

[project]
name = "dags"
version = "3.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "Karn Wong", email = "karn@karnwong.me" }
]
requires-python = ">=3.12"
dependencies = [
    "dagit>=1.9.6",
    "dagster>=1.9.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]
